fix timeline alignment
make sub-title alignment consistent

--- a/about.css
+++ b/about.css
@@ -209,7 +209,7 @@
   display: flex;
   flex-direction: column;
   /* background: #333; */
-  color: gray;
+  color: #9da4b2;
   border-radius: 10px;
   padding: 10px;
 }
@@ -249,4 +249,20 @@
 .about h4,
 .about h5 {
  color: #f5defc;
+ position: relative;
+}
+
+/* text right if the card is even  */
+.card:nth-child(even) > .info > .sub-title {
+  text-align: right;
+}
+
+/* setting dot to the left if the card is odd */
+.card:nth-child(odd) > .info > .sub-title::before {
+  left: -45px;
+}
+
+/* setting dot to the right if the card is odd */
+.card:nth-child(even) > .info > .sub-title::before {
+  right: -45px;
 }
